_cache/v0.18.1/openssl/specs.md
---
title: "openssl"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["1.1.1o"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 6, "num_specs_by_stack": {"data-vis-sdk": 1, "tutorial": 2, "build_systems": 1, "e4s": 1, "root": 6, "radiuss": 1, "aws-ahug": 2, "aws-isc": 2, "aws-ahug-aarch64": 2, "aws-isc-aarch64": 2}}
spec_details: [{"hash": "hqlqpsnqoifap6mlkbr5fyxoaq3gynbk", "compiler": "gcc@=7.5.0", "versions": ["1.1.1o"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["certs=system", "~docs", "~shared"], "stacks": ["data-vis-sdk", "tutorial", "build_systems", "e4s", "root", "radiuss"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/openssl-1.1.1o/linux-ubuntu18.04-x86_64-gcc-7.5.0-openssl-1.1.1o-hqlqpsnqoifap6mlkbr5fyxoaq3gynbk.spack"}, {"hash": "jnq3knhqd25sgrjgei3iz4cliazogfpq", "compiler": "gcc@=7.3.1", "versions": ["1.1.1o"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["certs=system", "~docs", "~shared"], "stacks": ["aws-ahug", "root", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/openssl-1.1.1o/linux-amzn2-x86_64_v4-gcc-7.3.1-openssl-1.1.1o-jnq3knhqd25sgrjgei3iz4cliazogfpq.spack"}, {"hash": "a2r65wqlvuoazimen2a7oijeh4s6yvjo", "compiler": "gcc@=7.3.1", "versions": ["1.1.1o"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["certs=system", "~docs", "~shared"], "stacks": ["aws-ahug-aarch64", "aws-isc-aarch64", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/openssl-1.1.1o/linux-amzn2-graviton2-gcc-7.3.1-openssl-1.1.1o-a2r65wqlvuoazimen2a7oijeh4s6yvjo.spack"}, {"hash": "6olgymbhzyntx2h7wfcptjb5ijokgqsl", "compiler": "gcc@=7.3.1", "versions": ["1.1.1o"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["certs=system", "~docs", "~shared"], "stacks": ["aws-ahug-aarch64", "aws-isc-aarch64", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/openssl-1.1.1o/linux-amzn2-aarch64-gcc-7.3.1-openssl-1.1.1o-6olgymbhzyntx2h7wfcptjb5ijokgqsl.spack"}, {"hash": "rhizngcriyzl262kgbxqdnwzrixyyvjc", "compiler": "gcc@=7.3.1", "versions": ["1.1.1o"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["certs=system", "~docs", "~shared"], "stacks": ["aws-ahug", "root", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/openssl-1.1.1o/linux-amzn2-x86_64_v3-gcc-7.3.1-openssl-1.1.1o-rhizngcriyzl262kgbxqdnwzrixyyvjc.spack"}, {"hash": "bj2jnt77kpvmffbl6k7lnz4y6z45mab5", "compiler": "gcc@=8.4.0", "versions": ["1.1.1o"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["certs=system", "~docs", "~shared"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/openssl-1.1.1o/linux-ubuntu18.04-x86_64-gcc-8.4.0-openssl-1.1.1o-bj2jnt77kpvmffbl6k7lnz4y6z45mab5.spack"}]
---